--- a/image_shower/index.html
+++ b/image_shower/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="image">
         <h1>Save Images From Internet</h1>
+        <input type="text" id="Url" placeholder="Enter the Url"/>
+        <button onclick="displayImage()">Show me</button>
     </div>
     <script src="./script.js"></script>
 </body>
