--- a/image_shower/index.html
+++ b/image_shower/index.html
@@ -11,7 +11,7 @@
         <h1>Save Images From Internet</h1>
         <input type="text" id="Url" placeholder="Enter the Url"/>
         <button onclick="displayImage()">Show me</button>
-        <div class="image"></div>
+        <div id="image"></div>
     </div>
     <script src="./script.js"></script>
 </body>
